unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__ActivationMethod__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ActivationMethod__c</fullName>
    <description>The activation method used to publish messages for this relationship.</description>
    <label>Activation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>automatic</fullName>
                <label>Automatic</label>
            </value>
            <value>
                <fullName>customCode</fullName>
                <label>Custom Code</label>
            </value>
            <value>
                <fullName>flow</fullName>
                <label>Flow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>