unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__ActivationMethodData__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ActivationMethodData__c</fullName>
    <description>Additional information relating to the specified activation method.</description>
    <label>Activation Method Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>