unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__CorrelationField__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CorrelationField__c</fullName>
    <label>Correlation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>