unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__DeclarativeFields__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DeclarativeFields__c</fullName>
    <label>Deprecated - Declarative Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>