unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__Enabled__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Accept messages from this publication.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>