unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__Identifier__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Identifier__c</fullName>
    <inlineHelpText>Identifier of the publication. This must be unique for custom publications. If you do not enter a value, this field automatically set to a combination of the Publication Name and Source Object when you save the publication.</inlineHelpText>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>