unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__LinkControlDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LinkControlDeveloperName__c</fullName>
    <description>Custom identifier used when enabling return data. Return data fields are identified by their API names, which include this developer name. We recommend that you do not update the developer name after enabling return data.</description>
    <inlineHelpText>This field must be populated to enable object linking. Subscription target objects that wish to link to this publication source object should have specifically named fields that include this Link Control Developer Name.</inlineHelpText>
    <label>Return Data Developer Name</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>