unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__LinkControlFor__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LinkControlFor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For return data publications only. Automatically populated lookup to the subscription that this return data publication relates to. Do not update this field manually.</description>
    <inlineHelpText>This field is populated automatically when a Link Control publication is created and should not be populated by the user.</inlineHelpText>
    <label>Return Data For</label>
    <referenceTo>fferpcore__MessagingSubscription__c</referenceTo>
    <relationshipLabel>Link Control Publications</relationshipLabel>
    <relationshipName>LinkControlPublications</relationshipName>
    <type>Lookup</type>
</CustomField>