unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__Obsolete__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No longer in use.</description>
    <inlineHelpText>Selecting Obsolete marks the publication as no longer in use. It will not appear on the administration screen and cannot be enabled.</inlineHelpText>
    <label>Obsolete</label>
    <type>Checkbox</type>
</CustomField>