unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__OwnerProduct__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__OwnerProduct__c</fullName>
    <label>Publisher</label>
    <referenceTo>fferpcore__ERPProduct__c</referenceTo>
    <relationshipLabel>Publications</relationshipLabel>
    <relationshipName>MessagingPublications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>