unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__SendingHook__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SendingHook__c</fullName>
    <description>Name of the Apex class that determines the way in which messages are delivered. This class must implement the SendingHook interface.</description>
    <inlineHelpText>Name of the Apex class that determines the way in which messages are delivered. This class must implement the SendingHook interface.</inlineHelpText>
    <label>Sending Hook</label>
    <length>128</length>
    <type>Text</type>
</CustomField>