unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__SourceObject__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SourceObject__c</fullName>
    <inlineHelpText>The object type that data will be taken from.</inlineHelpText>
    <label>Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>