unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__UseProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__UseProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Process Builder is used to trigger message delivery. When cleared, the trigger supplied with the publication is used. When selected, the process associated with the publication Identifier is used.</description>
    <inlineHelpText>Indicates whether Process Builder is used to trigger message delivery. When cleared, the trigger supplied with the publication is used. When selected, the process associated with the publication Identifier is used.</inlineHelpText>
    <label>Use Process Builder</label>
    <type>Checkbox</type>
</CustomField>