unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__VirtualObject__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__VirtualObject__c</fullName>
    <label>Virtual Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>