unpackaged/main/default/objects/fferpcore__MessagingPublication__c/fields/fferpcore__VirtualObjectProvider__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__VirtualObjectProvider__c</fullName>
    <label>Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>